app/gitea/deployment.yaml
#@ load("@ytt:data", "data")
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
  namespace: #@ data.values.gitea.namespace
spec:
  replicas: 1
  selector:
    matchLabels: #@ data.values.gitea.matchLabels
  template:
    metadata:
      labels: #@ data.values.gitea.matchLabels
    spec:
      containers:
      - name: gitea
        image: #@ "gitea/gitea:{}".format(data.values.gitea.version)
        imagePullPolicy: Always
        ports:
        - name: web
          containerPort: 3000
        volumeMounts:
        - name: gitea-data
          mountPath: "/var/lib/drone"
        - name: tz-config
          mountPath: /etc/localtime
      volumes:
      - name: gitea-data
        emptyDir: {}
      - name: tz-config
        hostPath:
          path: #@ "/usr/share/zoneinfo/" + data.values.timezone
