app/gitea/service.yaml
#@ load("@ytt:data", "data")
---
kind: Service
apiVersion: v1
metadata:
  name: gitea
  namespace: #@ data.values.gitea.namespace
spec:
  selector: #@ data.values.gitea.matchLabels
  ports:
  - name: web
    port: 80
    targetPort: 3000
