app/gitea/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitea
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  rules:
  - host: git${CICD_NAME_SUFFIX}.${CICD_DNS_DOMAIN}
    http:
      paths:
      - path: /
        backend:
          serviceName: gitea
          servicePort: web
